# Process this file with autoconf to produce a configure script

# ===================================================================
# Initial block
# ===================================================================
AC_INIT([libym_cell], [1.0],
        [yusuke_matsunaga@ieee.org],
        [libym_cell])dnl

AC_REVISION($Rev: 2507 $)dnl

AC_PREREQ(2.69)dnl

AC_COPYRIGHT([
Copyright (C) 2005-2010, 2014 Yusuke Matsunaga
All rights reserved.
])dnl

AC_CONFIG_SRCDIR([include/cell/cell_nsdef.h])dnl

AC_CONFIG_AUX_DIR([config])dnl
AC_CONFIG_MACRO_DIR([config])dnl
AC_SUBST(ac_aux_dir)dnl

AM_INIT_AUTOMAKE()dnl


# ===================================================================
# Checks for programs
# ===================================================================
AC_ISC_POSIX
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LN_S
AC_PROG_INSTALL
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_LIBTOOL

if test $enable_shared = no; then
  AC_DEFINE(BUILD_STATIC, 1, [Define for doing static link])
  AM_LDFLAGS="-static"
  AC_SUBST(AM_LDFLAGS)
fi


# ===================================================================
# Checks for libraries
# ===================================================================


# ===================================================================
# Checks for header files
# ===================================================================


# ===================================================================
# Checks for typedefs, structures, and compiler characteristics
# ===================================================================
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T


# ===================================================================
# Check for size of built-in types
# ===================================================================


# ===================================================================
# Check for QT
# It's a kind of magic!
# ===================================================================
YM_CHECK_QT([ym_have_qt=yes], [ym_have_qt=no])


# ===================================================================
# Check for C++ language
# ===================================================================
AC_LANG_CPLUSPLUS


# ===================================================================
# Check for CppUTest
# ===================================================================
YM_CHECK_CPPUTEST([ym_have_cpputest=yes], [ym_have_cpputest=no])


# ===================================================================
# Declare files to be generated by configure script
# ===================================================================
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([include/Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_CONFIG_FILES([src/ci/Makefile])
AC_CONFIG_FILES([src/mislib/Makefile])
AC_CONFIG_FILES([src/dotlib/Makefile])
AC_CONFIG_FILES([src/libcomp/Makefile])
AC_CONFIG_FILES([tests/Makefile])


# ===================================================================
# Local definitions
# ===================================================================

YMTOOLS_SRCDIR="\$(top_srcdir)/../.."
YMTOOLS_BUILDDIR="\$(top_builddir)/../.."
AC_SUBST([YMTOOLS_SRCDIR])
AC_SUBST([YMTOOLS_BUILDDIR])

AC_SUBST([YM_CXXOPTFLAGS], ["-O3"])
AC_SUBST([YM_CXXDBGFLAGS], ["-O3 -g"])
AC_SUBST([YM_CXXPRFFLAGS], ["-O3 -pg"])

YM_INIT_EXTRA_SUBDIRS
YM_INIT_TESTS_SUBDIRS

if test $ym_have_qt = yes; then
   YM_ADD_TESTS_SUBDIRS([qt])
   AC_CONFIG_FILES([tests/qt/Makefile])
fi

#if test $ym_have_cpputest = yes; then
#   YM_ADD_TESTS_SUBDIRS([CppUTest])
#   AC_CONFIG_FILES([tests/CppUTest/Makefile])
#fi

YM_FINISH_EXTRA_SUBDIRS
YM_FINISH_TESTS_SUBDIRS


# ===================================================================
# Generate configured files
# ===================================================================
AC_OUTPUT

# End-Of-File
